test/src/e2e_vm_tests/test_programs/should_fail/impure_read_calls_impure_write/src/main.sw
contract;

fn main() {
}

#[storage(read)]
fn can_read() {
  can_write();
}

#[storage(write)]
fn can_write() {}
